<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/useroption"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.westga.tamikowilliamsattendancerepairapp.UIActivity.ChooseActivity"
    tools:showIn="@layout/activity_choose">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/chooseTxt"
            android:id="@+id/chooseTxt"
            android:layout_gravity="center"
            android:textColor="#84970e"
            android:textSize="30dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/studentChooseBtn"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#ffffff"
                android:background="#84970e"
                android:textSize="25sp"
                android:id="@+id/studentChooseBtn"
                android:onClick="click_Student" />

            <Button
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/courseChooseBtn"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#ffffff"
                android:background="#84970e"
                android:textSize="25sp"
                android:id="@+id/courseChooseBtn"
                android:onClick="click_Course" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
