<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.westga.tamikowilliamsattendancerepairapp.UIActivity.CourseActivity"
    tools:showIn="@layout/activity_course">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_weight="0.56"
        android:layout_marginTop="50dp"
        android:id="@+id/courseLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="19dp"
                android:paddingRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="ID"
                android:id="@+id/courseID" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="19dp"
                android:paddingRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="not assigned"
                android:id="@+id/notAssigned2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Name:"
                android:id="@+id/courseNameTxt" />

            <EditText
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingRight="20dp"
                android:id="@+id/courseNameEdit"
                android:layout_column="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="15dp"
                android:paddingRight="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="#Students"
                android:id="@+id/numStudents" />

            <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="19dp"
                android:paddingRight="5dp"
                android:id="@+id/numEdit"
                android:layout_column="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="32dp"
            android:weightSum="1">

            <Button
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:text="@string/findCourseBtn"
                android:id="@+id/findCourseBtn"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="#ffffff"
                android:background="#84970e"
                android:onClick="findCourse"
                android:textSize="18dp" />

            <Button
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:text="@string/addCourseBtn"
                android:id="@+id/newCourseBtn"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:textColor="#ffffff"
                android:background="#84970e"
                android:textSize="18dp"
                android:onClick="newCourse" />

            <Button
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:text="@string/editCourseBtn"
                android:id="@+id/editCourseBtn"
                android:layout_marginLeft="10dp"
                android:textColor="#ffffff"
                android:background="#84970e"
                android:textSize="18dp"
                android:onClick="editCourse" />

            <Button
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:text="@string/deleteCourseBtn"
                android:id="@+id/deleteCourseBtn"
                android:layout_marginLeft="10dp"
                android:textColor="#ffffff"
                android:background="#84970e"
                android:onClick="removeCourse"
                android:textSize="18dp" />

        </LinearLayout>

    </TableLayout>


</RelativeLayout>
